main page now displays bingo squares

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,6 @@ block content
   h1 #{title} of doom
 
   ul.list-group
-    each book, i in books
+    each bingoSquare, i in bingoSquares
       li.list-group-item
-        a(href='/books/' + book._id)= book.title
+        a(href='/books/' + bingoSquare._id)= bingoSquare.name
