--- a/views/bingosquare.pug
+++ b/views/bingosquare.pug
@@ -1,4 +1,14 @@
 extends layout
 
 block content
-  h1 banana
+  h1= bingosquare.name
+  p= bingosquare.description
+  p #[strong Hard Mode:] #{bingosquare.hardmode}
+  - if (bingosquareuser.selectedbook)
+    p #[strong Selected Book:] #{bingosquareuser.selectedbook}
+  
+  h3 Potential Books for This Square
+  ul.list-group
+    each book, i in bingosquareuser.potentialbooks
+      li.list-group-item
+        a(href='/bingosquares/' + bingoSquare._id)= book.title
