--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html
     title Book bingo
     link(rel='stylesheet' href='/components/bootstrap/css/bootstrap.css')
     link(rel='stylesheet' href='/css/style.css')
+    link(href='https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css', rel='stylesheet')
   body
   
     // nav bar
@@ -41,3 +42,4 @@ html
     script(src='/javascripts/jquery-3.5.1.min.js')
     script(src='/javascripts/main.js')
     script(src='/components/bootstrap/js/bootstrap.min.js')
+    script(src='https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js')
