--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,6 +17,8 @@ html
           if user
             li.nav-item
               a.nav-link(href='/books/add') Add Book
+            li.nav-item
+              a.nav-link(href='books/list') Your Books
         ul.navbar-nav.navbar-right
           if user
             li.nav-item
