list of bingo squares on individual book page

--- a/views/book.pug
+++ b/views/book.pug
@@ -3,9 +3,10 @@ extends layout
 block content
   h1= book.title
   h3 Written by #{book.author}
-  h5 Added by #{username}
-  p= book.description
-  hr
+  ul.list-group
+    each bingoSquare, i in bingoSquares
+      li.list-group-item
+        a(href='/bingosquares/' + bingoSquare._id)= bingoSquare.name
   if user
     if user.id == book.user
       a.btn.btn-default(href='/books/edit/' + book._id) Edit
