--- a/views/bingosquare.pug
+++ b/views/bingosquare.pug
@@ -11,4 +11,4 @@ block content
   ul.list-group
     each book, i in books
       li.list-group-item
-        a(href='/#')= book.title
+        a(href='/books/'+ book._id)= book.title
