--- a/views/book.pug
+++ b/views/book.pug
@@ -12,5 +12,5 @@ block content
         
   if user
     if user.id == book.user
-      a.btn.btn-default(href='/books/edit/' + book._id) Edit
+      a.btn.btn-dark(href='/books/edit/' + book._id) Edit
       a.btn.btn-danger.delete-book(href='#', data-id=book._id) Delete
