--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,7 +18,7 @@ html
             li.nav-item
               a.nav-link(href='/books/add') Add Book
             li.nav-item
-              a.nav-link(href='books/list') Your Books
+              a.nav-link(href='/books/list') Your Books
         ul.navbar-nav.navbar-right
           if user
             li.nav-item
