--- a/views/bingocard.pug
+++ b/views/bingocard.pug
@@ -2,6 +2,8 @@ extends layout
 
 block content
   h1 #{title}
+  
+  p To complete Book Bingo, read a book from each of the following categories. List items in green are categories you've read books for already! But you can always change or move them around.
 
   ul.list-group
     each bingoSquare, i in bingoSquareData
