--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,8 @@ extends layout
 
 block content
   h1 #{title}
+  
+  p Below is the current bingo square! Please log in to start tracking your own!
 
   ul.list-group
     each bingoSquare, i in bingoSquares
