--- a/views/edit_book.pug
+++ b/views/edit_book.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 #{title} of doom
+  h1 #{title}
   
   form(method='POST', action='/books/edit/' + book._id)
     #form-group
